# Postarr

./: .dockerignore  .gitignore  Dockerfile  README.md  drives.json  entrypoint.sh  gunicorn.conf.py  main.py  migrate_db.py  package-lock.json  package.json  progress.py  pyproject.toml
.github/workflows/: docker-build-nightly.yml  pr-test-build.yml
DapsEX/: media.py  plex_upload.py  poster_renamerr.py  unmatched_assets.py  utils.py
Payloads/: border_replacerr_payload.py  drive_sync_payload.py  plex_uploader_payload.py  poster_renamerr_payload.py
config/: docker_compose.sample.yaml
daps_webui/: __init__.py
daps_webui/config/: config.py
daps_webui/models/: __init__.py  gdrives.py  plex_instance.py  radarr_instance.py  rclone.py  schedule.py  settings.py  sonarr_instance.py
daps_webui/utils/: webui_utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
migrations/versions/: 0496f39b1e64_add_job_id_and_message_to_job_history.py  32696c475113_add_tmdb_imdb_tvdb_columns_to_file_cache.py  4e767a310e1a_add_notifier_db_model.py  63093756b57a_add_notifier_event_table.py  a1084944482c_add_auth_method_and_rename_rclone_db_.py  aa70f6ec52c6_add_is_configured_flag_to_db_for_modules.py  ae421c71565c_add_instance_arr_id_tmdb_id_imdb_id_.py  af21229dc2ae_initial_migration.py  af2c8bd878ae_add_friendly_name_column_to_gdrives.py  c2967bd806fd_add_drive_root_column.py  dcf1d3c96d80_add_drive_type_column.py  f9e1b0f86c57_initial.py
modules/: __init__.py  border_replacerr.py  database_cache.py  drive_sync.py  logger.py  media.py  plex_upload.py  poster_renamerr.py  progress.py  result.py  settings.py  unmatched_assets.py  utils.py  webhook_listener.py  yaml_config.py
postarr/: __init__.py
postarr/config/: config.py
postarr/models/: __init__.py  (+12 more)
(+42 files in other folders)
